
Tools:
* bdeinfo
  - print more metadata ?
* bdeexport
  - create tool to export decrypted BDE volume to RAW file?
* bdemount
  - implement native MacOS-X version

Format:
* validation
* TPM encoded VMK ?
* VMK date time - change password on USB encrypted drive
* what is entry type 0x000b ?
* why does Windows hide the last 4096 bytes of the volume?

20141023
* changes for deployment

20141017
* changes for deployment

20141013
* worked on utility scripts

20140928
* removed README.macosx
* changes for project site move
* updated utility scripts
* updates for latest libfdata

20140731
* bug fix in Python bindings

20140728
* small change in bdemount for Dokan support

20140727
* updated dependencies
* updated msvscpp files
* fixes for FreeBSD 8 compilation
* worked on bdemount

20140629
* small improvements to error reporting
* compression method is now forced to effective 16-bits

20140607
* worked on tests
* updated msvscpp files

20140531
* updated dependencies
* worked on Python bindings
* added is locked function

20140405
* worked on setup.py

20140404
* worked on tests

20140403
* worked on exposing metadata
* worked on Python bindings

20140401
* worked on exposing metadata
* worked on Python bindings

20140331
* worked on exposing metadata

20140330
* worked on Python bindings
* worked on tests
* moved password hashes to password keep

20140112
* 2014 update
* updated dependencies

20131211
* worked on Python bindings
* worked on exposing metadata via bdeinfo
* updated msvscpp files

20131205
* updated dependencies

20130908
* updated dependencies
* added libcthreads build support
* updated msvscpp files
* bug fixes
* code clean up

20130729
* updated dependencies
* pybde fixes for >2G file objects in BFIO glue code

20130716
* worked on git support
* updated dependencies

20130703
* fixed some typos

20130624
* fix for dealing with padding in FVE metadata block

20130422
* updated dependencies
* updated pybde
* fix in dpkg files for python binding
