@@ -57,6 +57,10 @@ Format:
 * what is entry type 0x000b ?
 * why does Windows hide the last 4096 bytes of the volume?
 
+20141028
+* changes for deployment
+* bug fix in Python-bindings
+
 20141023
 * changes for deployment
 
